--- a/.github/actions/setup-node-dependencies/action.yml
+++ b/.github/actions/setup-node-dependencies/action.yml
@@ -16,6 +16,7 @@ runs:
   using: 'composite'
   steps:
     - name: Setup Node.js 20.x
+      id: setup-node
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
