--- a/.github/actions/setup-node-dependencies/action.yml
+++ b/.github/actions/setup-node-dependencies/action.yml
@@ -7,11 +7,6 @@ inputs:
     required: false
     default: 'true'
 
-outputs:
-  env-cache-hit:
-    description: 'Whether the .env file was restored from cache'
-    value: ${{ steps.cache-env.outputs.cache-hit }}
-
 runs:
   using: 'composite'
   steps:
@@ -20,27 +15,7 @@ runs:
       with:
         node-version: '20.x'
 
-    - name: Generate .env cache key
-      if: inputs.create-env == 'true' && env.DB_PORT != '' && env.DB_USER != ''
-      id: env-cache-key
-      run: |
-        # Create a hash based on NON-SECRET configuration only for security
-        CONFIG_HASH=$(echo "${DB_HOST}-${NODE_ENV}" | sha256sum | cut -d' ' -f1)
-        echo "config-hash=${CONFIG_HASH}" >> $GITHUB_OUTPUT
-        echo "Generated .env cache key: ${CONFIG_HASH}"
-      shell: bash
-
-    - name: Restore .env cache
-      if: inputs.create-env == 'true' && env.DB_PORT != '' && env.DB_USER != ''
-      id: cache-env
-      uses: actions/cache@v4
-      with:
-        path: .env
-        key: ${{ runner.os }}-env-file-${{ steps.env-cache-key.outputs.config-hash }}
-        restore-keys: |
-          ${{ runner.os }}-env-file-
-
-    - name: Create .env file (if needed and cache miss)
+    - name: Create .env file
       if: inputs.create-env == 'true' && env.DB_PORT != '' && env.DB_USER != '' && steps.cache-env.outputs.cache-hit != 'true'
       run: |
         cat > .env << EOF
