--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,9 @@ jobs:
         uses: ./.github/actions/setup-node-dependencies
         with:
           create-env: 'false'
+      - name: Install dependencies
+        run: npm ci
+        shell: bash
 
       - name: Run ESLint
         run: npm run lint
