--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,12 +52,38 @@ jobs:
         uses: ./.github/actions/setup-node-dependencies
         with:
           create-env: 'false'
-      - name: Debug Dependencies
+
+      - name: Debug - Check if node_modules exists
         run: |
-          echo "Package.json contents:"
-          cat package.json
-          echo "\nNode modules directory contents:"
-          ls -la node_modules
+          echo "Current directory:"
+          pwd
+          echo "Directory contents:"
+          ls -la
+          echo "Checking node_modules:"
+          if [ -d "node_modules" ]; then
+            echo "✅ node_modules directory exists"
+            echo "node_modules size:"
+            du -sh node_modules
+            echo "node_modules/.bin contents:"
+            ls -la node_modules/.bin/ | head -20
+          else
+            echo "❌ node_modules directory does not exist"
+          fi
+
+      - name: Debug - Check package.json and package-lock.json
+        run: |
+          echo "=== package.json content ==="
+          if [ -f "package.json" ]; then
+            cat package.json
+          else
+            echo "❌ package.json not found"
+          fi
+          echo "=== package-lock.json exists? ==="
+          if [ -f "package-lock.json" ]; then
+            echo "✅ package-lock.json exists"
+          else
+            echo "❌ package-lock.json not found"
+          fi
 
       - name: Verify ESLint installation
         run: |
