--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Setup and Restore Dependencies from Cache
         uses: ./.github/actions/setup-node-dependencies
         with:
-          create-env: 'false'
+          create-env: false
 
       - name: Debug - Check if node_modules exists
         run: |
