--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ env:
   NODE_ENV: production
 
 jobs:
-  # Stage 1: Install Dependencies (and populate cache)
+  # Stage 1: Install Dependencies
   install-dependencies:
     name: Install Dependencies
     runs-on: ubuntu-latest
@@ -31,15 +31,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+      - name: Setup
+        uses: ./.github/actions/setup-node-dependencies
 
   # Stage 2: Linting
   linting:
@@ -51,14 +44,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup
+        uses: ./.github/actions/setup-node-dependencies
         with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+          create-env: 'false'
 
       - name: Run ESLint
         run: npm run lint
@@ -76,14 +65,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup
+        uses: ./.github/actions/setup-node-dependencies
         with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+          create-env: 'false'
 
       - name: Run tests
         run: npm run test:cov
@@ -92,7 +77,7 @@ jobs:
   security:
     name: Security
     runs-on: ubuntu-latest
-    needs: [linting, test]
+    needs: [install-dependencies, linting, test]
     permissions:
       security-events: write
       actions: read
@@ -104,14 +89,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup
+        uses: ./.github/actions/setup-node-dependencies
         with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+          create-env: 'false'
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
@@ -127,32 +108,27 @@ jobs:
 
       - name: Check Dependencies Security
         run: |
-          npm audit --audit-level=moderate;
-          if [ $? -ne 0 ]; then
-            echo "❌ Dependency vulnerabilities detected!"
-            exit 1
-          else
+          echo "Checking dependencies for security vulnerabilities..."
+          if npm audit --audit-level=moderate; then
             echo "✅ No dependency vulnerabilities found"
+          else
+            echo "❌ Dependency vulnerabilities detected!"
+            npm audit --audit-level=moderate
+            exit 1
           fi
 
   # Stage 5: Docker Build
   docker-build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [linting, test, security]
+    needs: [install-dependencies, linting, test, security]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+      - name: Setup
+        uses: ./.github/actions/setup-node-dependencies
 
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v3
@@ -257,17 +233,32 @@ jobs:
   pipeline-summary:
     name: Pipeline Summary
     runs-on: ubuntu-latest
-    needs: [linting, test, security, docker-build, docker-publish]
+    needs:
+      [
+        install-dependencies,
+        linting,
+        test,
+        security,
+        docker-build,
+        docker-publish,
+      ]
     if: always()
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Run pipeline summary
+
+      - name: Generate CI Summary
         uses: ./.github/actions/pipeline-summary
         with:
+          install-dependencies-result: ${{ needs.install-dependencies.result }}
           linting-result: ${{ needs.linting.result }}
           test-result: ${{ needs.test.result }}
           security-result: ${{ needs.security.result }}
           docker-build-result: ${{ needs.docker-build.result }}
           docker-publish-result: ${{ needs.docker-publish.result }}
+          github-event-name: ${{ github.event_name }}
+          github-event-number: ${{ github.event.number }}
+          github-base-ref: ${{ github.base_ref }}
+          github-ref-name: ${{ github.ref_name }}
+          default-branch: ${{ github.event.repository.default_branch }}
