--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,26 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup
-        uses: ./.github/actions/setup-node-dependencies
+      - name: 🔧 Setup Node.js 20.x
+        id: setup-node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+      - name: Install dependencies (if cache miss)
+        run: npm install --loglevel verbose
+        shell: bash
+
+      - name: Print npm log on failure
+        if: failure()
+        run: cat /home/runner/.npm/_logs/*.log
+
+      - name: Upload npm logs as artifact
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: npm-debug-logs
+          path: /home/runner/.npm/_logs/*.log
 
   # Stage 2: Linting
   linting:
@@ -44,15 +62,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🔧 Setup Node.js 20.x
-        id: setup-node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          cache: 'npm'
-      - name: Install dependencies (if cache miss)
-        run: npm ci --verbose
-        shell: bash
       - name: Run ESLint
         run: npm run lint
 
