--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky",
+    "prepare": "test -n \"$CI\" || husky",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/database/typeOrm.config.ts",
     "migration:create": "typeorm-ts-node-commonjs migration:create -d ./src/database/typeOrm.config.ts",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/database/typeOrm.config.ts",
