--- a/.github/actions/setup-node-dependencies/action.yml
+++ b/.github/actions/setup-node-dependencies/action.yml
@@ -15,7 +15,7 @@ outputs:
 runs:
   using: 'composite'
   steps:
-    - name: 🔧 Setup Node.js 20.x
+    - name: Setup Node.js 20.x
       id: setup-node
       uses: actions/setup-node@v4
       with:
