--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "lint": "npx eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:check": "npx eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "test": "npx jest",
+    "test:watch": "npx jest --watch",
+    "test:cov": "npx jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "npx jest --config ./test/jest-e2e.json",
     "prepare": "test -n \"$CI\" || husky",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/database/typeOrm.config.ts",
     "migration:create": "typeorm-ts-node-commonjs migration:create -d ./src/database/typeOrm.config.ts",
