--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ env:
   DB_NAME: ${{ secrets.DB_NAME }}
   # Application Configuration
   APP_PORT: ${{ secrets.PORT }}
-  NODE_ENV: production
+  NODE_ENV: development
 
 jobs:
   # Stage 1: Install Dependencies
