--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,8 @@ jobs:
     name: Linting
     runs-on: ubuntu-latest
     needs: install-dependencies
-
+    env:
+      NODE_ENV: development
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
