--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,6 @@ env:
   DB_NAME: ${{ secrets.DB_NAME }}
   # Application Configuration
   APP_PORT: ${{ secrets.PORT }}
-  NODE_ENV: ${{ vars.NODE_ENV }}
 
 jobs:
   # Stage 1: Install Dependencies
@@ -117,6 +116,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     needs: [install-dependencies, linting, test, security]
+    env:
+      NODE_ENV: production
 
     steps:
       - name: Checkout repository
